--- a/src/FirstSimplexPhase.Demo/FirstSimplexPhase.Demo.csproj
+++ b/src/FirstSimplexPhase.Demo/FirstSimplexPhase.Demo.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FirstSimplexPhase.Library\FirstSimplexPhase.Library.fsproj" />
+    <ProjectReference Include="..\FirstSimplexPhase.Library\FirstSimplexPhase.Library.csproj" />
   </ItemGroup>
 
 </Project>
